Error - PSR-4 autoload updated to use uppercase Intelisys

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
   },
   "autoload": {
     "psr-4": {
-      "intelisys\\PhpEws\\": "src/"
+      "Intelisys\\PhpEws\\": "src/"
     }
   },
   "extra": {
